# lak

./: .clang-format  .gitignore  .gitmodules  .natvis  LICENSE  Makefile  README.md  clean_build.sh  compile.bat  compile.sh  compile_local_llvm.bat  meson.build  meson_options.txt  packagefiles.bat  packagefiles.sh  setup.bat  setup_local_llvm.bat  win_compile_local_llvm.sh  win_packagefiles.sh  win_setup_local_llvm.sh
.github/workflows/: build.yaml
example/: array_example.cpp  trie_example.cpp  type_pack_example.cpp
inc/lak/: algorithm.hpp  algorithm.inl  apply.inl  array.hpp  array.inl  bank_ptr.hpp  bank_ptr.inl  basic_program.inl  binary_reader.hpp  binary_reader.inl  binary_writer.hpp  binary_writer.inl  bit_reader.hpp  bit_reader.inl  bitflag.hpp  bitreader.hpp  bitreader.inl  bitset.hpp  buffer.hpp  buffer_span.hpp  char.hpp  char_utils.hpp  char_utils.inl  colour.hpp  colour.inl  compare.hpp  compiler.hpp  concepts.hpp  const_string.hpp  crc.hpp  debug.hpp  debug.inl  defer.hpp  endian.hpp  errno_result.hpp  error_code_result.hpp  events.hpp  file.hpp  file.inl  functional.hpp  (+70 more)
include/lak/: algorithm.hpp  algorithm.inl  alloc.hpp  apply.hpp  apply.inl  architecture.hpp  array.hpp  array.inl  await.hpp  bank_ptr.hpp  basic_program.inl  bigint.hpp  bigint_standalone.hpp  binary_reader.hpp  binary_reader.inl  binary_traits.hpp  binary_traits.inl  binary_writer.hpp  binary_writer.inl  bit_reader.hpp  bit_reader.inl  buffer.hpp  buffer_span.hpp  char_utils.hpp  char_utils.inl  colour.hpp  colour.inl  com_ptr.hpp  compiler.hpp  concepts.hpp  debug.hpp  (+81 more)
src/: alloc.cpp  architecture.cpp  bigint.cpp  debug.cpp  events.cpp  file.cpp  intrin.cpp  json.cpp  math.cpp  memmanip.cpp  memory.cpp  meson.build  platform.cpp  process.cpp  profile.cpp  strconv.cpp  string.cpp  string_view.cpp  tasks.cpp  test.cpp  tinflate.cpp  tokeniser.cpp  unicode.cpp  unique_pages.cpp  window.cpp
src/compression/: deflate.cpp  lz4.cpp
src/godot/: godot.cpp  meson.build
src/imgui/: backend.cpp  imgui.cpp  meson.build  widgets.cpp
src/libfive/: meson.build
src/linux/: architecture.cpp  memmanip.cpp  process.cpp
src/llvm/: meson.build
src/lmdb/: lmdb.cpp  meson.build
src/lua/: lua.cpp  meson.build
src/macos/: architecture.cpp  memmanip.cpp  process.cpp
src/opengl/: mesh.cpp  meson.build  shader.cpp  texture.cpp
src/posix/: memmanip.cpp  wrapper.hpp
src/qt/: .gitignore  lakqt.mk  window.cpp
src/sdl/: events.cpp  platform.cpp  window.cpp
src/sqlite3/: meson.build
src/tests/: algorithm.cpp  alloc.cpp  array.cpp  bigint.cpp  bigint_standalone.cpp  bit_reader.cpp  bitflag.cpp  bitreader.cpp  bitset.cpp  com_ptr.cpp  compare.cpp  const_string.cpp  dsl.cpp  functional.cpp  integer_range.cpp  iterator_wrappers.hpp  json.cpp  macro_utils.cpp  memory.cpp  meson.build  optional.cpp  priority_queue.cpp  ptr_intrin.cpp  result.cpp  span_manip.cpp  string_literals.cpp  string_view.cpp  test.cpp  test_main.cpp  tokeniser.cpp  trie.cpp  type_pack.cpp  visit.cpp  wide_math.cpp  wrapper.cpp
src/tests/imgui/: imgui.cpp  meson.build
src/tests/libfive/: libfive.cpp  meson.build
src/tests/libgphoto2/: libgphoto2.cpp  meson.build
src/tests/llvm/: meson.build
src/tests/lmdb/: lmdb.cpp  meson.build
src/tests/lua/: lua.cpp  meson.build
src/tests/structure/: nbt.cpp
src/tests/win32/: wrapper.cpp
src/tests/windowing/: basic_program.cpp  meson.build  window.cpp
src/win32/: architecture.cpp  events.cpp  memmanip.cpp  platform.cpp  platform.hpp  process.cpp  window.cpp  wrapper.cpp  wrapper.hpp
src/windowing/: events.cpp  meson.build  platform.cpp  window.cpp
src/windowing/common/: events.inl  platform.inl  window.inl
src/windowing/qt/: Makefile  events.cpp  impl.hpp  lakqt.pro  meson.build  platform.cpp  window.cpp
src/windowing/sdl/: events.cpp  impl.hpp  meson.build  platform.cpp  window.cpp
src/windowing/template/: events.cpp  impl.hpp  meson.build  platform.cpp  window.cpp
src/windowing/win32/: events.cpp  impl.hpp  meson.build  platform.cpp  window.cpp
src/windowing/xcb/: events.cpp  impl.hpp  platform.cpp  window.cpp
src/windowing/xlib/: events.cpp  impl.hpp  meson.build  platform.cpp
src/xcb/: events.cpp  platform.cpp  window.cpp
src/xlib/: events.cpp  platform.cpp  window.cpp
subprojects/: .gitignore  SDL2.wrap  glm.wrap  godot-cpp-4.1.wrap  imgui.wrap  libfive.wrap  libgphoto2.wrap  llvm.wrap  lmdb.wrap  lua.wrap  stb.wrap
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/imgui/examples/: imgui_impl_softraster.cpp  imgui_impl_softraster.h
subprojects/packagefiles/imgui/misc/softraster/: barycentric.h  color.h  defines.h  softraster.h  texture.h  utils.h
subprojects/packagefiles/libfive/libfive/: meson.build
subprojects/packagefiles/libfive/libfive/src/: meson.build
subprojects/packagefiles/libfive/libfive/src/eval/: meson.build
subprojects/packagefiles/libfive/libfive/src/oracle/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/brep/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/brep/dc/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/brep/hybrid/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/brep/simplex/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/brep/vol/: meson.build
subprojects/packagefiles/libfive/libfive/src/render/discrete/: meson.build
subprojects/packagefiles/libfive/libfive/src/solve/: meson.build
subprojects/packagefiles/libfive/libfive/src/tree/: meson.build
subprojects/packagefiles/libfive/subprojects/packagefiles/libpng/: meson.build
subprojects/packagefiles/libfive/subprojects/packagefiles/libpng/subprojects/: zlib.wrap
subprojects/packagefiles/libgphoto2/: meson.build  meson_options.txt
subprojects/packagefiles/libgphoto2/lib/: build.sh  meson.build  win_build.sh
subprojects/packagefiles/llvm/: meson.build  meson_options.txt
subprojects/packagefiles/llvm/lib/: meson.build
subprojects/packagefiles/lmdb/: meson.build
(+31 files in other folders)
