# testing options

option('lak_enable_tests',
	type: 'boolean',
	value: false,
	yield: true,
)

# windowing options

option('lak_enable_windowing',
	type: 'boolean',
	value: false,
	yield: true,
)

option('use_vendored_windows_sdl',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_backend',
	type: 'combo',
	choices: [
		'win32',
		'xlib',
		'xcb',
		'sdl',
		'qt',
	],
	value: 'sdl',
	yield: true,
)

# llvm options

option('lak_enable_llvm',
	type: 'boolean',
	value: false,
	yield: true,
)

option('use_vendored_llvm',
	type: 'boolean',
	value: true,
	yield: true,
)

option('llvm_components',
	type: 'array',
	value: [
		'Native',
	],
	yield: true,
)

option('llvm_install_components',
	type: 'array',
	value: [
		'Core',
		'ExecutionEngine',
		'OrcJIT',
		'Support',
	],
	yield: true,
)

option('llvm_parallel_link_jobs',
	type: 'string',
	value: '4',
	yield: true,
)

# lmdb options

option('lak_enable_lmdb',
	type: 'boolean',
	value: false,
	yield: true,
)

# glm options

option('lak_enable_glm',
	type: 'boolean',
	value: false,
	yield: true,
)

# dear imgui options

option('lak_enable_imgui',
	type: 'boolean',
	value: false,
	yield: true,
)

# libfive options

option('lak_enable_libfive',
	type: 'boolean',
	value: false,
	yield: true,
)
