lak = static_library(
  'lak',
  [
    'architecture.cpp',
    'compression/deflate.cpp',
    'compression/lz4.cpp',
    'alloc.cpp',
    'debug.cpp',
    'file.cpp',
    'json.cpp',
    'math.cpp',
    'memmanip.cpp',
    'profile.cpp',
    'strconv.cpp',
    'string_view.cpp',
    'tasks.cpp',
    'test.cpp',
    'tinflate.cpp',
    'tokeniser.cpp',
    'unicode.cpp',
    'unique_pages.cpp',
  ],
  override_options: 'cpp_std=' + version,
  include_directories: include_directories('..', '../inc'),
  dependencies: dependency('threads'),
)
