laktest = static_library(
  'laktest',
  [
    'algorithm.cpp',
    'array.cpp',
    'bit_reader.cpp',
    'bitflag.cpp',
    'bitset.cpp',
    'compare.cpp',
    'const_string.cpp',
    'dsl.cpp',
    'functional.cpp',
    'integer_range.cpp',
    'json.cpp',
    'ptr_intrin.cpp',
    'span_manip.cpp',
    'string_literals.cpp',
    'test.cpp',
    'tokeniser.cpp',
    'trie.cpp',
    'type_pack.cpp',
  ],
  override_options: 'cpp_std=' + version,
  include_directories: include_directories('../..', '../../inc'),
  link_with: lak,
)
