laktest = static_library(
  'laktest',
  [
    'algorithm.cpp',
    'alloc.cpp',
    'array.cpp',
    'bit_reader.cpp',
    'bitflag.cpp',
    'bitset.cpp',
    'compare.cpp',
    'const_string.cpp',
    'dsl.cpp',
    'functional.cpp',
    'integer_range.cpp',
    'json.cpp',
    'macro_utils.cpp',
    'memory.cpp',
    'ptr_intrin.cpp',
    'result.cpp',
    'span_manip.cpp',
    'string_literals.cpp',
    'test.cpp',
    'tokeniser.cpp',
    'trie.cpp',
    'type_pack.cpp',
    'visit.cpp',
  ],
  override_options: 'cpp_std=' + version,
  include_directories: include_directories('../..', '../../inc'),
  link_with: lak,
)
