laktestcore = static_library(
	'laktestcore',
	[
		'algorithm.cpp',
		'alloc.cpp',
		'array.cpp',
		'bit_reader.cpp',
		'bitflag.cpp',
		'bitset.cpp',
		'com_ptr.cpp',
		'compare.cpp',
		'const_string.cpp',
		'dsl.cpp',
		'functional.cpp',
		'integer_range.cpp',
		'json.cpp',
		'macro_utils.cpp',
		'memory.cpp',
		'optional.cpp',
		'ptr_intrin.cpp',
		'result.cpp',
		'span_manip.cpp',
		'string_literals.cpp',
		'test.cpp',
		'tokeniser.cpp',
		'trie.cpp',
		'type_pack.cpp',
		'visit.cpp',
	],
	override_options: 'cpp_std=' + version,
	dependencies: lakcore_dep,
)

laktestcore_dep = declare_dependency(
	link_whole: laktestcore,
)
